style the popup

--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Saved articles</title>
+    <title>Sciety Links</title>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <style>
       body {
-        width: 200px;
-        font-family: Arial, sans-serif;
+        font-family: 'Source Sans Pro', sans-serif;
+        width: 300px;
+        padding: 10px;
+        background-color: #fff;
+        color: #222;
+      }
+      h1 {
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 700;
+        color: #ce471a;
+        margin-bottom: 20px;
+      }
+      ul {
+        list-style-type: none;
+        padding: 0;
+      }
+      li {
+        margin-bottom: 10px;
+        padding: 10px;
+        background-color: #f5f5f5;
+        border-radius: 5px;
+      }
+      a {
+        color: #ce471a;
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+      button {
+        font-family: 'Source Sans Pro', sans-serif;
+        background-color: #ce471a;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        margin-top: 10px;
+        border-radius: 50px;
+        cursor: pointer;
+        font-weight: bold;
+      }
+      button:hover {
+        background-color: #b33d15;
       }
     </style>
   </head>
   <body>
-    <h3>Saved articles</h3>
-    <div id="linkList"></div>
+    <h1>Sciety Curator</h1>
+    <p>Saved preprints will appear here. Click on a link to visit the preprint on Sciety</p>
+    <ul id="linksList"></ul>
+    <button id="clearButton">Clear All</button>
     <script src="popup.js"></script>
   </body>
 </html>
