--- a/popup.html
+++ b/popup.html
@@ -10,12 +10,11 @@
         padding: 10px;
         background-color: #fff;
         color: #222;
-        border-radius:6px;
       }
       h1 {
         font-family: 'Ubuntu', sans-serif;
         font-weight: 700;
-        color: #51504f;
+        color: #ce471a;
         margin-bottom: 20px;
       }
       ul {
